fix: .wrap padding-bottom changed to fix footer hiding content

--- a/core_webshop/phoneshop/static/css/style.css
+++ b/core_webshop/phoneshop/static/css/style.css
@@ -49,6 +49,7 @@ body::before {
 .wrap {
     flex: 1 0 auto;
     min-width: 1200px;
+    padding-bottom: 60px;
 }
 
 .wrap,
@@ -56,6 +57,7 @@ body::before {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 16px;
+    padding-bottom: 60px;
 }
 
 header {
@@ -65,6 +67,7 @@ header {
     background: rgba(15, 17, 21, 0.9);
     backdrop-filter: blur(8px) saturate(120%);
     border-bottom: 1px solid var(--border);
+    height: 53px;
 }
 
 .navbar {
@@ -111,6 +114,7 @@ main {
     display: flex;
     gap: 20px;
     padding: 22px 0;
+
 }
 
 footer {
@@ -124,6 +128,7 @@ footer {
     bottom: 0;
     left: 0;
     width: 100%;
+    height: 45px;
 }
 
 .btn {
